@@ -39,3 +39,7 @@ try:
     import asyncio  # noqa
 except ImportError:
     import trollius as asyncio  # noqa
+
+# Keep supporting the deprecated misspelled subpackage "extention"
+# TODO: Remove in the future
+from . import extension as extention  # noqa
